--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <fragment
-        android:id="@+id/frag"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.9"
-        android:name="com.example.sandy.kotlinfragment.HomeFrag"
-        />
-
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -23,39 +15,52 @@
             android:layout_height="match_parent">
 
             <Button
+                android:id="@+id/homebtn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1" />
+                android:layout_height="match_parent"
+                android:text="Home" />
 
             <Button
+                android:id="@+id/bluebtn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2" />
+                android:layout_height="match_parent"
+                android:text="Blue" />
 
             <Button
+                android:id="@+id/redbtn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="3" />
+                android:layout_height="match_parent"
+                android:text="Red" />
 
             <Button
+                android:id="@+id/yellowbtn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="4" />
+                android:layout_height="match_parent"
+                android:text="Yellow" />
 
             <Button
+                android:id="@+id/purplebtn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="5" />
+                android:layout_height="match_parent"
+                android:text="purple" />
 
             <Button
+                android:id="@+id/skybtn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="6" />
+                android:layout_height="match_parent"
+                android:text="sky blue" />
 
         </LinearLayout>
 
     </HorizontalScrollView>
 
+    <fragment
+        android:id="@+id/frag"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.9"
+        android:name="com.example.sandy.kotlinfragment.HomeFrag"
+        />
 
 
 </LinearLayout>
