--- a/app/src/main/res/layout/yellowfrag.xml
+++ b/app/src/main/res/layout/yellowfrag.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2c8c4f">
+    android:background="#efef05">
 
     <TextView
         android:layout_width="wrap_content"
