button added in fragment activity

--- a/app/src/main/res/layout/homefrag.xml
+++ b/app/src/main/res/layout/homefrag.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2c8c4f">
+    android:background="#545760">
 
     <TextView
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Home Fragment"
@@ -14,5 +15,15 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:textColor="#ffffff"/>
+
+    <Button
+        android:id="@+id/last"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Last Page"
+        android:background="#0ed2e4"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/text"
+        android:layout_marginTop="20dp"/>
 
 </RelativeLayout>
