--- a/app/src/main/res/layout/yellowfrag.xml
+++ b/app/src/main/res/layout/yellowfrag.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Home Fragment"
+        android:text="Yellow Fragment"
         android:textSize="30dp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
